--- a/Sprint2/Task0.ipynb
+++ b/Sprint2/Task0.ipynb
@@ -175,6 +175,9 @@
    "language": "C#",
    "name": ".net-csharp"
   },
+  "language_info": {
+   "name": "polyglot-notebook"
+  },
   "polyglot_notebook": {
    "kernelInfo": {
     "defaultKernelName": "csharp",
