--- a/Sprint2/Task0.ipynb
+++ b/Sprint2/Task0.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -140,8 +140,87 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Производитель: Toyota, Модель: Corolla\n",
+      "Двери: 4\n",
+      "Производитель: Honda, Модель: CBR600RR\n",
+      "Вид двигателя: Inline Four\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    // Свойство для хранения марки транспортного средства\n",
+    "    public string Make { get; set; }\n",
+    "\n",
+    "    // Свойство для хранения модели транспортного средства\n",
+    "    public string Model { get; set; }\n",
+    "\n",
+    "    // Конструктор класса Vehicle\n",
+    "    public Vehicle(string make, string model)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "    }\n",
+    "\n",
+    "    // Метод для отображения информации о транспортном средстве\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Производитель: {Make}, Модель: {Model}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    // Свойство для хранения количества дверей\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    // Конструктор класса Car\n",
+    "    public Car(string make, string model, int doors) : base(make, model)\n",
+    "    {\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    // Переопределенный метод DisplayInfo для отображения информации о автомобиле\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    // Свойство для хранения типа двигателя\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    // Конструктор класса Motorcycle\n",
+    "    public Motorcycle(string make, string model, string engineType) : base(make, model)\n",
+    "    {\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    // Переопределенный метод DisplayInfo для отображения информации о мотоцикле\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Вид двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Создаем объект класса Car\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo(); // Выводит информацию о автомобиле\n",
+    "\n",
+    "// Создаем объект класса Motorcycle\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Honda\", \"CBR600RR\", \"Inline Four\");\n",
+    "myMotorcycle.DisplayInfo(); // Выводит информацию о мотоцикле"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -165,8 +244,111 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Класс: млекопитающие; Отряд: псовые; Порода: стаффорд.\n",
+      "Класс: млекопитающие; Отряд: кошачьи; Окрас: рыжий.\n",
+      "Класс: лучеперые рыбы; Отряд: лососеобразные; Среда обитания: соленая вода.\n",
+      "Класс: птицы; Отряд: попугаеобразные; Размых крыльев: 1 метр.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Classification { get; set; }\n",
+    "    public string Subclassification { get; set; }\n",
+    "\n",
+    "    public Animal(string classification, string subclassification)\n",
+    "    {\n",
+    "        Classification = classification;\n",
+    "        Subclassification = subclassification;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.Write($\"Класс: {Classification}; Отряд: {Subclassification}; \");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string classification, string subclassification, string breed) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода: {Breed}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Cat(string classification, string subclassification, string color) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Окрас: {Color}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal\n",
+    "{\n",
+    "    public string Habitat { get; set; }\n",
+    "\n",
+    "    public Fish(string classification, string subclassification, string habitat) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Habitat = habitat;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Среда обитания: {Habitat}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Wingspan { get; set; }\n",
+    "\n",
+    "    public Bird(string classification, string subclassification, string wingspan) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Wingspan = wingspan;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Размых крыльев: {Wingspan}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "Dog Jack = new Dog(\"млекопитающие\", \"псовые\", \"стаффорд\");\n",
+    "Cat Murzik = new Cat(\"млекопитающие\", \"кошачьи\", \"рыжий\");\n",
+    "Fish mrFish = new Fish(\"лучеперые рыбы\", \"лососеобразные\", \"соленая вода\");\n",
+    "Bird Pirate = new Bird(\"птицы\", \"попугаеобразные\", \"1 метр\");\n",
+    "\n",
+    "Animal[] animals = {Jack, Murzik, mrFish, Pirate};\n",
+    "foreach (Animal name in animals)\n",
+    "{\n",
+    "    name.DisplayInfo();\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
