--- a/Sprint2/Task1.ipynb
+++ b/Sprint2/Task1.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -156,8 +156,97 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Производитель: Toyota, Модель: Corolla\n",
+      "Двери: 4\n",
+      "Производитель: Ferrari, Модель: 488 Spider\n",
+      "Двери: 2\n",
+      "Автомобиль с откидным верхом: True\n",
+      "Производитель: Ducati, Модель: Panigale V4\n",
+      "Тип двигателя: V4\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "\n",
+    "    public Vehicle(string make, string model)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Производитель: {Make}, Модель: {Model}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    public Car(string make, string model, int doors) : base(make, model)\n",
+    "    {\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SportsCar : Car\n",
+    "{\n",
+    "    public bool IsConvertible { get; set; }\n",
+    "\n",
+    "    public SportsCar(string make, string model, int doors, bool isConvertible) \n",
+    "        : base(make, model, doors)\n",
+    "    {\n",
+    "        IsConvertible = isConvertible;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Автомобиль с откидным верхом: {IsConvertible}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    public Motorcycle(string make, string model, string engineType) : base(make, model)\n",
+    "    {\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Тип двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo();\n",
+    "\n",
+    "SportsCar mySportsCar = new SportsCar(\"Ferrari\", \"488 Spider\", 2, true);\n",
+    "mySportsCar.DisplayInfo();\n",
+    "\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Ducati\", \"Panigale V4\", \"V4\");\n",
+    "myMotorcycle.DisplayInfo();\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -181,8 +270,136 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Класс: млекопитающие; Отряд: псовые; Порода: стаффорд. \n",
+      "Класс: млекопитающие; Отряд: псовые; Порода: гончая. Максимальная скорость: 45.\n",
+      "Класс: млекопитающие; Отряд: кошачьи; Окрас: рыжий.\n",
+      "Класс: лучеперые рыбы; Отряд: лососеобразные; Среда обитания: соленая вода.\n",
+      "Класс: птицы; Отряд: попугаеобразные; Размых крыльев: 1 метр."
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Classification { get; set; }\n",
+    "    public string Subclassification { get; set; }\n",
+    "\n",
+    "    public Animal(string classification, string subclassification)\n",
+    "    {\n",
+    "        Classification = classification;\n",
+    "        Subclassification = subclassification;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.Write($\"Класс: {Classification}; Отряд: {Subclassification}; \");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string classification, string subclassification, string breed) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        // Console.WriteLine();\n",
+    "        base.DisplayInfo();\n",
+    "        Console.Write($\"Порода: {Breed}. \");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class HuntingDog : Dog  // Класс со сложным наследованием\n",
+    "{\n",
+    "    public int Speed { get; set; }\n",
+    "\n",
+    "    public HuntingDog(string classification, string subclassification, string breed, int speed) : base(classification, subclassification, breed)\n",
+    "    {\n",
+    "        Speed = speed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine();\n",
+    "        base.DisplayInfo();\n",
+    "        Console.Write($\"Максимальная скорость: {Speed}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Cat(string classification, string subclassification, string color) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine();\n",
+    "        base.DisplayInfo();\n",
+    "        Console.Write($\"Окрас: {Color}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal\n",
+    "{\n",
+    "    public string Habitat { get; set; }\n",
+    "\n",
+    "    public Fish(string classification, string subclassification, string habitat) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Habitat = habitat;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine();\n",
+    "        base.DisplayInfo();\n",
+    "        Console.Write($\"Среда обитания: {Habitat}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Wingspan { get; set; }\n",
+    "\n",
+    "    public Bird(string classification, string subclassification, string wingspan) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Wingspan = wingspan;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine();\n",
+    "        base.DisplayInfo();\n",
+    "        Console.Write($\"Размых крыльев: {Wingspan}.\");\n",
+    "    } \n",
+    "}\n",
+    "\n",
+    "Dog Jack = new Dog(\"млекопитающие\", \"псовые\", \"стаффорд\");\n",
+    "Cat Murzik = new Cat(\"млекопитающие\", \"кошачьи\", \"рыжий\");\n",
+    "Fish mrFish = new Fish(\"лучеперые рыбы\", \"лососеобразные\", \"соленая вода\");\n",
+    "Bird Pirate = new Bird(\"птицы\", \"попугаеобразные\", \"1 метр\");\n",
+    "\n",
+    "\n",
+    "HuntingDog Boss = new HuntingDog(\"млекопитающие\", \"псовые\", \"гончая\", 45); // Объект класса со сложным наследованием\n",
+    "\n",
+    "Animal[] animals = {Jack, Boss, Murzik, mrFish, Pirate};\n",
+    "foreach (Animal name in animals)\n",
+    "{\n",
+    "    name.DisplayInfo();\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
@@ -190,6 +407,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
