--- a/Sprint2/Task2.ipynb
+++ b/Sprint2/Task2.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -298,8 +298,91 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль издает звук сигнала клаксона\n",
+      "Мотоциклист выполняет трюк 'колесо'\n"
+     ]
+    }
+   ],
+   "source": [
+    "public abstract class Vehicle\n",
+    "{\n",
+    "    // Свойство Speed для определения скорости транспортного средства\n",
+    "    public int Speed { get; set; }\n",
+    "\n",
+    "    // Конструктор по умолчанию\n",
+    "    protected Vehicle()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "    }\n",
+    "\n",
+    "    // Метод Move, который будет переопределен в производных классах\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспортное средство движется.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Интерфейс Car, определяющий специфику автомобиля\n",
+    "public interface ICar\n",
+    "{\n",
+    "    void Honk(); // Метод для сигнала гона\n",
+    "}\n",
+    "\n",
+    "// Интерфейс Motorcycle, определяющий специфику мотоцикла\n",
+    "public interface IMotorcycle\n",
+    "{\n",
+    "    void Wheelie(); // Метод для выполнения трюка \"колесо\"\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle, ICar\n",
+    "{\n",
+    "    public Car() : base()\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public void Honk()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль издает звук сигнала клаксона\");\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода Move\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        base.Move();\n",
+    "        Console.WriteLine(\"Автомобиль движется со скоростью \" + Speed);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle, IMotorcycle\n",
+    "{\n",
+    "    public Motorcycle() : base()\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public void Wheelie()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоциклист выполняет трюк 'колесо'\");\n",
+    "    }\n",
+    "\n",
+    "    // Переопределение метода Move\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        base.Move();\n",
+    "        Console.WriteLine(\"Мотоцикл движется со скоростью \" + Speed);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car mycar = new Car();\n",
+    "Motorcycle mymotorcycle = new Motorcycle();\n",
+    "\n",
+    "mycar.Honk();\n",
+    "mymotorcycle.Wheelie();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -323,8 +406,99 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Класс: лучеперые рыбы; Отряд: лососеобразные; Среда обитания: соленая вода.\n",
+      "Класс: птицы; Отряд: попугаеобразные; Размых крыльев: 1 метр.\n",
+      "Рыба пускает пузыри...\n",
+      "Птичка чирикает...\n"
+     ]
+    }
+   ],
+   "source": [
+    "public abstract class Animal\n",
+    "{\n",
+    "    public string Classification { get; set; }\n",
+    "    public string Subclassification { get; set; }\n",
+    "\n",
+    "    public Animal(string classification, string subclassification)\n",
+    "    {\n",
+    "        Classification = classification;\n",
+    "        Subclassification = subclassification;\n",
+    "    }\n",
+    "\n",
+    "    public virtual string DisplayInfo()\n",
+    "    {\n",
+    "        return $\"Класс: {Classification}; Отряд: {Subclassification}; \";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IFish \n",
+    "{\n",
+    "    void DoBubbles(); \n",
+    "}\n",
+    "\n",
+    "public interface IBird\n",
+    "{\n",
+    "    void Tweet();\n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal, IFish\n",
+    "{\n",
+    "    public string Habitat { get; set; }\n",
+    "\n",
+    "    public Fish(string classification, string subclassification, string habitat) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Habitat = habitat;\n",
+    "    }\n",
+    "\n",
+    "    public override string DisplayInfo()\n",
+    "    {\n",
+    "        return base.DisplayInfo() + $\"Среда обитания: {Habitat}.\";\n",
+    "    } \n",
+    "\n",
+    "    public void DoBubbles()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Рыба пускает пузыри...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal, IBird\n",
+    "{\n",
+    "    public string Wingspan { get; set; }\n",
+    "\n",
+    "    public Bird(string classification, string subclassification, string wingspan) : base(classification, subclassification)\n",
+    "    {\n",
+    "        Wingspan = wingspan;\n",
+    "    }\n",
+    "\n",
+    "    public override string DisplayInfo()\n",
+    "    {\n",
+    "        return base.DisplayInfo() + $\"Размых крыльев: {Wingspan}.\";\n",
+    "    } \n",
+    "\n",
+    "    public void Tweet()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Птичка чирикает...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Fish mrFish = new Fish(\"лучеперые рыбы\", \"лососеобразные\", \"соленая вода\");\n",
+    "Bird Pirate = new Bird(\"птицы\", \"попугаеобразные\", \"1 метр\");\n",
+    "\n",
+    "\n",
+    "Animal[] animals = {mrFish, Pirate};\n",
+    "foreach (Animal name in animals)\n",
+    "{\n",
+    "    Console.WriteLine(name.DisplayInfo());\n",
+    "}\n",
+    "\n",
+    "mrFish.DoBubbles();\n",
+    "Pirate.Tweet();\n"
+   ]
   }
  ],
  "metadata": {
