--- a/Sprint3/Task0.ipynb
+++ b/Sprint3/Task0.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -87,8 +87,56 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль движется 100 km/h.\n",
+      "Мотоцикл движется 100 km/h.\n",
+      "Транспорт движется 100 km/h.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public virtual void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Car, переопределяющий метод Drive()\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Motorcycle, также переопределяющий метод Drive()\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Vehicle> vehicles = new List<Vehicle>\n",
+    "{\n",
+    "    new Car(),\n",
+    "    new Motorcycle(),\n",
+    "    new Vehicle() // Добавляем экземпляр базового класса для демонстрации\n",
+    "};\n",
+    "\n",
+    "foreach (var vehicle in vehicles)\n",
+    "{\n",
+    "    vehicle.Drive(100); // Вызываем метод Drive() \n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -112,8 +160,54 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное бежит со скоростью 55\n",
+      "Птичка летит со скоростью 55\n",
+      "Рыба плывет со скоростью 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public virtual void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное бежит со скоростью {speed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public override void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птичка летит со скоростью {speed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal \n",
+    "{\n",
+    "    public override void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Рыба плывет со скоростью {speed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Animal> animals = new List<Animal> \n",
+    "{\n",
+    "    new Animal(),\n",
+    "    new Bird(),\n",
+    "    new Fish()\n",
+    "};\n",
+    "\n",
+    "foreach (var animal in animals)\n",
+    "{\n",
+    "    animal.Run(55);\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
@@ -121,6 +215,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
