--- a/Sprint3/Task1.ipynb
+++ b/Sprint3/Task1.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -173,8 +173,52 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт движется 60 km/h.\n",
+      "Автомобиль движется в Eco режиме.\n",
+      "Автомобиль переключает передачи вручную.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    // Метод Drive(), принимающий int\n",
+    "    public void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Drive(), принимающий string\n",
+    "    public void Drive(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется в {mode} режиме.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Drive(), принимающий bool\n",
+    "    public void Drive(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль переключает передачи вручную.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль оснащен автоматической коробкой передач.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "\n",
+    "myVehicle.Drive(60); // Вызов метода Drive() с int параметром\n",
+    "myVehicle.Drive(\"Eco\"); // Вызов метода Drive() с string параметром\n",
+    "myVehicle.Drive(true); // Вызов метода Drive() с bool параметром"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -198,8 +242,85 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Птичка летит со скоростью 5\n",
+      "Птичка голодная, поэтому никуда не полетит\n",
+      "Животное голодное, поэтому никуда не побежит\n",
+      "Рыба плывет со скоростью 26\n",
+      "Рыба плывет быстро\n",
+      "Рыба плывет спокойно\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public virtual void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное бежит со скоростью {speed}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Run(bool ishungry)\n",
+    "    {\n",
+    "        if (ishungry)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Животное голодное, поэтому никуда не побежит\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Животное побежало\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public override void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птичка летит со скоростью {speed}\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Run(bool ishungry)\n",
+    "    {\n",
+    "        if (ishungry)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Птичка голодная, поэтому никуда не полетит\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Птичка полетела\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal \n",
+    "{\n",
+    "    public override void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Рыба плывет со скоростью {speed}\");\n",
+    "    }\n",
+    "\n",
+    "    public void Run(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Рыба плывет {mode}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Fish myFish = new Fish();\n",
+    "Bird myBird = new Bird();\n",
+    "Animal myAnimal = new Animal();\n",
+    "\n",
+    "myBird.Run(5);  // вызов метода Run(int speed) класса Bird, наследованного от класса Animal\n",
+    "myBird.Run(true);  // вызов метода Run(bool ishungry) класса Bird, наследованного от класса Animal\n",
+    "myAnimal.Run(true); // вызов метода Run(bool ishungry) класса Animal\n",
+    "myFish.Run(26);  // вызов метода Run(int speed) класса Fish, наследованного от класса Animal\n",
+    "myFish.Run(\"быстро\");  // вызов метода Run(int string) класса Fish\n",
+    "myFish.Run(\"спокойно\");  // вызов метода Run(int string) класса Fish"
+   ]
   }
  ],
  "metadata": {
