--- a/Sprint3/Task2.ipynb
+++ b/Sprint3/Task2.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -115,8 +115,79 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Машина едет.\n",
+      "Мотоцикл едет.\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "// Определение базового класса Vehicle\n",
+    "public class Vehicle\n",
+    "{\n",
+    "    public virtual void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспортное средство находится в движении.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Определение производного класса Car\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина едет.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Определение производного класса Motorcycle\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл едет.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Определение генерического класса VehicleCollection<T>\n",
+    "public class VehicleCollection<T> where T : Vehicle\n",
+    "{\n",
+    "    private List<T> _vehicles = new List<T>();\n",
+    "\n",
+    "    public void Add(T vehicle)\n",
+    "    {\n",
+    "        _vehicles.Add(vehicle);\n",
+    "    }\n",
+    "\n",
+    "    public void Remove(T vehicle)\n",
+    "    {\n",
+    "        _vehicles.Remove(vehicle);\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayVehicles()\n",
+    "    {\n",
+    "        foreach (var vehicle in _vehicles)\n",
+    "        {\n",
+    "            vehicle.Drive(); // Вызов метода Drive() для каждого транспортного средства\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "VehicleCollection<Vehicle> cars = new VehicleCollection<Vehicle>();\n",
+    "cars.Add(new Car());\n",
+    "cars.Add(new Motorcycle()); // Это возможно благодаря ограничению \"where T : Vehicle\"\n",
+    "\n",
+    "cars.DisplayVehicles(); // Выводит: \"Машина едет.\" и \"Мотоцикл едет.\"\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -140,8 +211,85 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное бежит со скоростью 25\n",
+      "Птичка летит со скоростью 25\n",
+      "Рыба плывет со скоростью 25\n",
+      "\n",
+      "*Удалили myFish*\n",
+      "Животное бежит со скоростью 25\n",
+      "Птичка летит со скоростью 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public virtual void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное бежит со скоростью {speed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public override void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птичка летит со скоростью {speed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fish : Animal \n",
+    "{\n",
+    "    public override void Run(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Рыба плывет со скоростью {speed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class AnimalCollection<T> where T : Animal\n",
+    "{\n",
+    "    private List<T> _animals = new List<T>();\n",
+    "\n",
+    "    public void Add(T vehicle)\n",
+    "    {\n",
+    "        _animals.Add(vehicle);\n",
+    "    }\n",
+    "\n",
+    "    public void Remove(T vehicle)\n",
+    "    {\n",
+    "        _animals.Remove(vehicle);\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayAnimals()\n",
+    "    {\n",
+    "        foreach (var animal in _animals)\n",
+    "        {\n",
+    "            animal.Run(25); // Вызов метода Run() для каждого транспортного средства\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "AnimalCollection<Animal> animals = new AnimalCollection<Animal>();\n",
+    "Animal myAnimal = new Animal();\n",
+    "Animal myFish = new Fish();\n",
+    "\n",
+    "animals.Add(myAnimal);\n",
+    "animals.Add(new Bird()); // Можно добавить и так\n",
+    "animals.Add(myFish);\n",
+    "\n",
+    "animals.DisplayAnimals(); \n",
+    "\n",
+    "Console.WriteLine();\n",
+    "animals.Remove(myFish);\n",
+    "Console.WriteLine(\"*Удалили myFish*\");\n",
+    "\n",
+    "animals.DisplayAnimals(); // из списка пропал объект myFish"
+   ]
   }
  ],
  "metadata": {
@@ -149,6 +297,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
