--- a/Sprint3/Task2.ipynb
+++ b/Sprint3/Task2.ipynb
@@ -269,7 +269,7 @@
     "    {\n",
     "        foreach (var animal in _animals)\n",
     "        {\n",
-    "            animal.Run(25); // Вызов метода Run() для каждого транспортного средства\n",
+    "            animal.Run(25); // Вызов метода Run() для каждого животного\n",
     "        }\n",
     "    }\n",
     "}\n",
