--- a/Sprint4/Task0.ipynb
+++ b/Sprint4/Task0.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -158,8 +158,110 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toyota Camry запущен.\n",
+      "Автомобиль готов к поездке.\n",
+      "Автомобиль разгоняется до 50 км/ч.\n",
+      "Текущая скорость: 50 км/ч\n",
+      "Harley-Davidson Street запущен.\n",
+      "Мотоцикл готов к поездке.\n",
+      "Мотоцикл рычит!\n",
+      "Harley-Davidson Street остановлен.\n",
+      "Мотоцикл полностью остановлен.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetCurrentSpeed();\n",
+    "}\n",
+    "\n",
+    "public abstract class Vehicle : IVehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    protected int currentSpeed;\n",
+    "\n",
+    "    public virtual void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual int GetCurrentSpeed()\n",
+    "    {\n",
+    "        return currentSpeed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Автомобиль готов к поездке.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Автомобиль полностью остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Accelerate(int amount)\n",
+    "    {\n",
+    "        currentSpeed += amount;\n",
+    "        Console.WriteLine($\"Автомобиль разгоняется до {currentSpeed} км/ч.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public bool HasSidecar { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Мотоцикл готов к поездке.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Мотоцикл полностью остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void RevEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл рычит!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IVehicle myCar = new Car { Make = \"Toyota\", Model = \"Camry\", NumberOfDoors = 4 };\n",
+    "myCar.Start();\n",
+    "((Car)myCar).Accelerate(50);\n",
+    "Console.WriteLine($\"Текущая скорость: {myCar.GetCurrentSpeed()} км/ч\");\n",
+    "        \n",
+    "IVehicle myMotorcycle = new Motorcycle { Make = \"Harley-Davidson\", Model = \"Street\", HasSidecar = false };\n",
+    "myMotorcycle.Start();\n",
+    "((Motorcycle)myMotorcycle).RevEngine();\n",
+    "myMotorcycle.Stop();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -183,8 +285,114 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот умылся и потянулся. Ему можно дать задание.\n",
+      "Текущие параметры рост: 30, вес: 5.\n",
+      "Кот охотится на мышь.\n",
+      "Кот отрубился спать. Больше его нельзя трогать.\n",
+      "Текущие параметры рост: 30, вес: 5.\n",
+      "\n",
+      "Собака готова действовать.\n",
+      "Текущие параметры рост: 40, вес: 15.\n",
+      "Собака набегалась и потратила 40 единиц энергии. Осталось еще 60.\n",
+      "Собака недоступна для взаимодействия.\n",
+      "Текущие параметры рост: 40, вес: 15.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void WakeUp();\n",
+    "    void FallAsleep();\n",
+    "    int GetCurrntEnergy();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public int Weight { get; set; }\n",
+    "    public int Height { get; set; }\n",
+    "    protected int currentEnergy;\n",
+    "\n",
+    "    public virtual void WakeUp()\n",
+    "    {\n",
+    "        currentEnergy = 100;\n",
+    "        Console.WriteLine($\"Текущие параметры рост: {Height}, вес: {Weight}.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void FallAsleep()\n",
+    "    {\n",
+    "        currentEnergy = 100;\n",
+    "        Console.WriteLine($\"Текущие параметры рост: {Height}, вес: {Weight}.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual int GetCurrntEnergy()\n",
+    "    {\n",
+    "        return currentEnergy;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public override void WakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака готова действовать.\");\n",
+    "        base.WakeUp();\n",
+    "    }\n",
+    "\n",
+    "    public override void FallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака недоступна для взаимодействия.\");\n",
+    "        base.FallAsleep();\n",
+    "    }\n",
+    "\n",
+    "    public void Play(int amount)\n",
+    "    {\n",
+    "        currentEnergy -= amount;\n",
+    "        Console.WriteLine($\"Собака набегалась и потратила {amount} единиц энергии. Осталось еще {currentEnergy}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "\n",
+    "    public override void WakeUp()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот умылся и потянулся. Ему можно дать задание.\");\n",
+    "        base.WakeUp();\n",
+    "    }\n",
+    "\n",
+    "    public override void FallAsleep()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот отрубился спать. Больше его нельзя трогать.\");\n",
+    "        base.FallAsleep();\n",
+    "    }\n",
+    "\n",
+    "    public void Hunt(string aim)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот охотится на {aim}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat {Weight=5, Height=30};\n",
+    "myCat.WakeUp();\n",
+    "myCat.Hunt(\"мышь\");\n",
+    "myCat.FallAsleep();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Dog myDog = new Dog {Weight=15, Height=40};\n",
+    "myDog.WakeUp();\n",
+    "myDog.Play(40);\n",
+    "myDog.FallAsleep();"
+   ]
   }
  ],
  "metadata": {
@@ -192,6 +400,9 @@
    "display_name": ".NET (C#)",
    "language": "C#",
    "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "polyglot-notebook"
   },
   "polyglot_notebook": {
    "kernelInfo": {
